[workspace]
members = [
    "account-decoder",
    "accounts-bench",
    "accounts-cluster-bench",
    "banking-bench",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bench-streamer",
    "bench-tps",
    "bloom",
    "bucket_map",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "connection-cache",
    "core",
    "dos",
    "download-utils",
    "entry",
    "faucet",
    "frozen-abi",
    "frozen-abi/macro",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "install",
    "keygen",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "log-analyzer",
    "logger",
    "measure",
    "memory-management",
    "merkle-root-bench",
    "merkle-tree",
    "metrics",
    "net-shaper",
    "net-utils",
    "notifier",
    "perf",
    "poh",
    "poh-bench",
    "program-runtime",
    "program-test",
    "programs/address-lookup-table",
    "programs/address-lookup-table-tests",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/bpf_loader/gen-syscall-list",
    "programs/compute-budget",
    "programs/config",
    "programs/ed25519-tests",
    "programs/loader-v4",
    "programs/stake",
    "programs/system",
    "programs/vote",
    "programs/zk-token-proof",
    "programs/zk-token-proof-tests",
    "pubsub-client",
    "quic-client",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-test",
    "runtime",
    "runtime/store-tool",
    "sdk",
    "sdk/cargo-build-bpf",
    "sdk/cargo-build-sbf",
    "sdk/cargo-test-bpf",
    "sdk/cargo-test-sbf",
    "sdk/gen-headers",
    "sdk/macro",
    "sdk/program",
    "send-transaction-service",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-hbase",
    "storage-proto",
    "streamer",
    "test-validator",
    "thin-client",
    "tokens",
    "tpu-client",
    "transaction-dos",
    "transaction-status",
    "udp-client",
    "upload-perf",
    "validator",
    "version",
    "watchtower",
    "zk-keygen",
    "zk-token-sdk",
]

exclude = [
    "programs/sbf",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "1.1.0"
authors = ["PUT Labs Maintainers <maintainers@put.com>"]
repository = "https://github.com/put-labs/put"
homepage = "https://www.put.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
aes-gcm-siv = "0.10.3"
ahash = "0.8.3"
anyhow = "1.0.71"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.7"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.8.0"
async-mutex = "1.4.0"
async-trait = "0.1.68"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.21.2"
bincode = "1.3.3"
bitflags = "1.3.1"
blake3 = "1.3.3"
block-buffer = "0.10.4"
borsh = "0.10.3"
bs58 = "0.4.0"
bv = "0.11.1"
byte-unit = "4.0.19"
bytecount = "0.6.3"
bytemuck = "1.13.1"
byteorder = "1.4.3"
bytes = "1.2"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cc = "1.0.79"
chrono = { version = "0.4.24", default-features = false }
chrono-humanize = "0.2.2"
clap = "2.33.1"
console = "0.15.7"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.30"
core_affinity = "0.5.10"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.8"
csv = "1.2.1"
ctrlc = "3.3.1"
curve25519-dalek = "3.2.1"
dashmap = "4.0.2"
derivation-path = { version = "0.2.0", default-features = false }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.2"
dirs-next = "2.0.0"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
either = "1.8.1"
enum-iterator = "1.4.1"
env_logger = "0.9.3"
etcd-client = "0.8.1"
ethnum = "1"
portable-atomic = "=0.3.4"
fast-math = "0.1"
fd-lock = "3.0.12"
flate2 = "1.0.26"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.28"
futures-util = "0.3.28"
gag = "1.0.0"
generic-array = { version = "0.14.7", default-features = false }
gethostname = "0.2.3"
getrandom = "0.1.14"
goauth = "0.13.1"
hex = "0.4.3"
hidapi = { version = "2.3.3", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.9"
humantime = "2.0.1"
hyper = "0.14.26"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.7"
indexmap = "1.9.3"
indicatif = "0.17.4"
Inflector = "0.11.4"
itertools = "0.10.5"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }
js-sys = "0.3.63"
json5 = "0.4.1"
jsonrpc-core = { version = "18.0.0", features = ["arbitrary_precision"] }
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-server-utils = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.144"
libloading = "0.7.4"
libsecp256k1 = "0.6.0"
log = "0.4.17"
lru = "0.7.7"
lz4 = "1.24.0"
matches = "0.1.10"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
modular-bitfield = "0.11.2"
nix = "0.26.2"
num-bigint = "0.4.3"
num_cpus = "1.15.0"
num_enum = "0.6.1"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.13.0"
openssl = "0.10"
ouroboros = "0.15.6"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
pkcs8 = "0.8.0"
predicates = "2.1"
pretty-hex = "0.3.0"
proc-macro2 = "1.0.59"
proptest = "1.2"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
quinn = "0.9.4"
quinn-proto = "0.9.4"
quinn-udp = "0.3.2"
quote = "1.0"
rand = "0.7.0"
rand_chacha = "0.2.2"
rand_core = "0.6.4"
raptorq = "1.7.0"
rayon = "1.7.0"
rcgen = "0.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.8.3"
rolling-file = "0.2.0"
reqwest = { version = "0.11.17", default-features = false }
rpassword = "7.2"
rustc_version = "0.4"
rustls = { version = "0.20.8", default-features = false }
rustversion = "1.0.12"
scopeguard = "1.1.0"
semver = "1.0.17"
serde = "1.0.163"
serde_bytes = "0.11.9"
serde_derive = "1.0.103"
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
serde_yaml = "0.9.21"
serial_test = "0.9.0"
serde_with = { version = "2.3.3", default-features = false }
sha2 = "0.10.6"
sha3 = "0.10.4"
signal-hook = "0.3.15"
smpl_jwt = "0.7.1"
socket2 = "0.4.9"
soketto = "0.7"
put_rbpf = { path = "../put-rbpf", version = "=0.2.0"}
static_assertions = "1.1.0"
stream-cancel = "0.8.1"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.4.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.3"
tar = "0.4.38"
tarpc = "0.29.0"
tempfile = "3.5.0"
test-case = "2.2.2"
thiserror = "1.0.40"
tiny-bip39 = "0.8.2"
tokio = "~1.14.1"
tokio-serde = "0.8"
tokio-stream = "0.1.12"
tokio-tungstenite = "0.17.2"
tokio-util = "0.6"
tonic = "0.8.3"
tonic-build = "0.8.4"
trees = "0.4.2"
tungstenite = "0.17.2"
unix_socket2 = "0.5.4"
uriparse = "0.6.4"
url = "2.3.1"
users = "0.10.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.10"
x509-parser = "0.14.0"
zeroize = { version = "1.3", default-features = false }
zstd = "0.11.2"


#####################
ppl-associated-token-account = { path = "../put-program-library/associated-token-account/program",version = "=1.0.0", features = ["no-entrypoint"] }
ppl-memo = { path = "../put-program-library/memo/program",version = "=1.0.0", features = ["no-entrypoint"] }
ppl-token = { path = "../put-program-library/token/program", version = "=1.0.0", features = ["no-entrypoint"] }
ppl-nft = { path = "../put-program-library/nft/program", version = "=1.0.0", features = ["no-entrypoint"] }
ppl-name = { path = "../put-program-library/name/program", version = "=1.0.0", features = ["no-entrypoint"]}

#####################
put-account-decoder = { path = "account-decoder", version = "=1.1.0" }
put-address-lookup-table-program = { path = "programs/address-lookup-table", version = "=1.1.0" }
put-banks-client = { path = "banks-client", version = "=1.1.0" }
put-banks-interface = { path = "banks-interface", version = "=1.1.0" }
put-banks-server = { path = "banks-server", version = "=1.1.0" }
put-bench-tps = { path = "bench-tps", version = "=1.1.0" }
put-bloom = { path = "bloom", version = "=1.1.0" }
put-bpf-loader-program = { path = "programs/bpf_loader", version = "=1.1.0" }
put-bucket-map = { path = "bucket_map", version = "=1.1.0" }
put-connection-cache = { path = "connection-cache", version = "=1.1.0", default-features = false }
put-clap-utils = { path = "clap-utils", version = "=1.1.0" }
put-clap-v3-utils = { path = "clap-v3-utils", version = "=1.1.0" }
put-cli = { path = "cli", version = "=1.1.0" }
put-cli-config = { path = "cli-config", version = "=1.1.0" }
put-cli-output = { path = "cli-output", version = "=1.1.0" }
put-client = { path = "client", version = "=1.1.0" }
put-compute-budget-program = { path = "programs/compute-budget", version = "=1.1.0" }
put-config-program = { path = "programs/config", version = "=1.1.0" }
put-core = { path = "core", version = "=1.1.0" }
put-download-utils = { path = "download-utils", version = "=1.1.0" }
put-entry = { path = "entry", version = "=1.1.0" }
put-faucet = { path = "faucet", version = "=1.1.0" }
put-frozen-abi = { path = "frozen-abi", version = "=1.1.0" }
put-frozen-abi-macro = { path = "frozen-abi/macro", version = "=1.1.0" }
put-genesis = { path = "genesis", version = "=1.1.0" }
put-genesis-utils = { path = "genesis-utils", version = "=1.1.0" }
put-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=1.1.0" }
put-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=1.1.0" }
put-gossip = { path = "gossip", version = "=1.1.0" }
put-loader-v4-program = { path = "programs/loader-v4", version = "=1.1.0" }
put-ledger = { path = "ledger", version = "=1.1.0" }
put-local-cluster = { path = "local-cluster", version = "=1.1.0" }
put-logger = { path = "logger", version = "=1.1.0" }
put-measure = { path = "measure", version = "=1.1.0" }
put-merkle-tree = { path = "merkle-tree", version = "=1.1.0" }
put-metrics = { path = "metrics", version = "=1.1.0" }
put-net-utils = { path = "net-utils", version = "=1.1.0" }
put-notifier = { path = "notifier", version = "=1.1.0" }
put-perf = { path = "perf", version = "=1.1.0" }
put-poh = { path = "poh", version = "=1.1.0" }
put-program = { path = "sdk/program", version = "=1.1.0" }
put-program-runtime = { path = "program-runtime", version = "=1.1.0" }
put-program-test = { path = "program-test", version = "=1.1.0" }
put-pubsub-client = { path = "pubsub-client", version = "=1.1.0" }
put-quic-client = { path = "quic-client", version = "=1.1.0" }
put-rayon-threadlimit = { path = "rayon-threadlimit", version = "=1.1.0" }
put-remote-wallet = { path = "remote-wallet", version = "=1.1.0", default-features = false }
put-rpc = { path = "rpc", version = "=1.1.0" }
put-rpc-client = { path = "rpc-client", version = "=1.1.0", default-features = false }
put-rpc-client-api = { path = "rpc-client-api", version = "=1.1.0" }
put-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "=1.1.0" }
put-runtime = { path = "runtime", version = "=1.1.0" }
put-sdk = { path = "sdk", version = "=1.1.0" }
put-sdk-macro = { path = "sdk/macro", version = "=1.1.0" }
put-send-transaction-service = { path = "send-transaction-service", version = "=1.1.0" }
put-stake-program = { path = "programs/stake", version = "=1.1.0" }
put-storage-bigtable = { path = "storage-bigtable", version = "=1.1.0" }
put-storage-hbase = { path = "storage-hbase", version = "=1.1.0" }
put-storage-proto = { path = "storage-proto", version = "=1.1.0" }
put-streamer = { path = "streamer", version = "=1.1.0" }
put-system-program = { path = "programs/system", version = "=1.1.0" }
put-test-validator = { path = "test-validator", version = "=1.1.0" }
put-thin-client = { path = "thin-client", version = "=1.1.0" }
put-tpu-client = { path = "tpu-client", version = "=1.1.0", default-features = false }
put-transaction-status = { path = "transaction-status", version = "=1.1.0" }
put-udp-client = { path = "udp-client", version = "=1.1.0" }
put-version = { path = "version", version = "=1.1.0" }
put-vote-program = { path = "programs/vote", version = "=1.1.0" }
put-zk-keygen = { path = "zk-keygen", version = "=1.1.0" }
put-zk-token-proof-program = { path = "programs/zk-token-proof", version = "=1.1.0" }
put-zk-token-sdk = { path = "zk-token-sdk", version = "=1.1.0" }


[patch.crates-io]
# for details, see https://github.com/solana-labs/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/solana-labs/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# Rust 1.69+ broke ntapi v0.3.x, which doesn't contain proper fix:
#   https://github.com/MSxDOS/ntapi/pull/12
ntapi = { git = "https://github.com/solana-labs/ntapi", rev = "97ede981a1777883ff86d142b75024b023f04fad" }
