[package]
name = "put-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
put-client = { workspace = true }
put-core = { workspace = true }
put-gossip = { workspace = true }
put-ledger = { workspace = true }
put-logger = { workspace = true }
put-measure = { workspace = true }
put-perf = { workspace = true }
put-poh = { workspace = true }
put-runtime = { workspace = true }
put-sdk = { workspace = true }
put-streamer = { workspace = true }
put-tpu-client = { workspace = true }
put-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
