[package]
name = "put-bucket-map"
description = "put-bucket-map"
documentation = "https://docs.rs/put-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
log = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
put-measure = { workspace = true }
put-sdk = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
rayon = { workspace = true }
put-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "put_bucket_map"

[[bench]]
name = "bucket_map"
