[package]
name = "put-cli-output"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/put-cli-output"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
clap = "2.33.0"
console = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
pretty-hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"]  }
put-account-decoder = { workspace = true }
put-clap-utils = { workspace = true }
put-cli-config = { workspace = true }
put-rpc-client-api = { workspace = true }
put-sdk = { workspace = true }
put-transaction-status = { workspace = true }
put-vote-program = { workspace = true }
ppl-memo = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
