[package]
name = "put-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/put-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "put-labs/put", branch = "master", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
put-address-lookup-table-program = { workspace = true }
put-bloom = { workspace = true }
put-client = { workspace = true }
put-entry = { workspace = true }
put-frozen-abi = { workspace = true }
put-frozen-abi-macro = { workspace = true }
put-geyser-plugin-manager = { workspace = true }
put-gossip = { workspace = true }
put-ledger = { workspace = true }
put-measure = { workspace = true }
put-metrics = { workspace = true }
put-net-utils = { workspace = true }
put-perf = { workspace = true }
put-poh = { workspace = true }
put-program-runtime = { workspace = true }
put-rayon-threadlimit = { workspace = true }
put-rpc = { workspace = true }
put-rpc-client-api = { workspace = true }
put-runtime = { workspace = true }
put-sdk = { workspace = true }
put-send-transaction-service = { workspace = true }
put-streamer = { workspace = true }
put-tpu-client = { workspace = true }
put-transaction-status = { workspace = true }
put-version = { workspace = true }
put-vote-program = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
matches = { workspace = true }
raptorq = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
serial_test = { workspace = true }
put-logger = { workspace = true }
put-program-runtime = { workspace = true }
put-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
