[package]
name = "put-download-utils"
description = "PUT Download Utils"
documentation = "https://docs.rs/put-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
console = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
put-runtime = { workspace = true }
put-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "put_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
