[package]
name = "put-faucet"
description = "PUT Faucet"
documentation = "https://docs.rs/put-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
put-clap-utils = { workspace = true }
put-cli-config = { workspace = true }
put-logger = { workspace = true }
put-metrics = { workspace = true }
put-sdk = { workspace = true }
put-version = { workspace = true }
ppl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "put_faucet"

[[bin]]
name = "put-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
