[package]
name = "put-genesis-utils"
description = "PUT Genesis Utils"
documentation = "https://docs.rs/put-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
put-download-utils = { workspace = true }
put-rpc-client = { workspace = true }
put-runtime = { workspace = true }
put-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "put_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
