[package]
name = "put-geyser-plugin-interface"
description = "The PUT Geyser plugin interface."
documentation = "https://docs.rs/put-geyser-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
put-sdk = { workspace = true }
put-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
